tests/unit-fail-compilation/j019a.c.ref
j019a.c:2:7: error: Indeterminate value used in an expression.
  Undefined behavior (UB-CEE2).
   see C11 section 6.2.4 http://rvdoc.org/C11/6.2.4
   see C11 section 6.7.9 http://rvdoc.org/C11/6.7.9
   see C11 section 6.8 http://rvdoc.org/C11/6.8
   see C11 section J.2:1 item 11 http://rvdoc.org/C11/J.2
   see CERT-C section EXP33-C http://rvdoc.org/CERT-C/EXP33-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j019a.c to see commands run.
