tests/unit-fail-compilation/j019a.c
int main(void){
      *(char*)10;
      return 0;
}
